<resources>
	<string name="app_name">PDroid Manager</string>
	<string name="permission_label_writeprivacysettings">Modify PDroid settings</string>
	<string name="permission_description_writeprivacysettings">Allows modification of PDroid settings associated with applications.</string>
	<string name="permission_label_readprivacysettings">Read PDroid settings</string>
	<string name="permission_description_readprivacysettings">Allows reading of PDroid settings associated with applications.</string>
	<string name="permission_label_manageprivacycontrollers">Configure PDroid Management Applications</string>
	<string name="permission_description_manageprivacycontrollers">Allows configuration of which apps are able to change PDroid settings</string>
		<string name="app_list_menu_search">Search</string>
		<string name="app_list_menu_refresh">Regenerate Application List</string>
		<string name="app_list_menu_preferences">Preferences</string>
		<string name="app_list_menu_filter">Filter</string>
		<string name="title_activity_main">PDroid Manager</string>
		<string name="app_list_app_icon_text">Application icon</string>
		<string name="app_list_has_internet_indicator">Indicator of Internet access privilege</string>
		<string name="applist_setting_filter_spinner_all_option_title">All</string>
		<string name="applist_dialogtext_updating_settings">Updating settings</string>
		<string name="applist_dialogtext_deleting_settings">Deleting settings</string>
		<string name="applist_dialogtext_generateapplist">Generating application list</string>
		<string name="applist_popupmenu_set_untrusted_values">Deny all</string>
		<string name="applist_popupmenu_set_trusted_values">Allow all</string>
		<string name="applist_popupmenu_set_default_values">Reset to default</string>
		<string name="applist_popupmenu_delete_settings">Delete settings</string>
		<string name="applist_popupmenu_customise_settings">Custom settings</string>
		<string name="applist_actionbar_selectall">Select all</string>
		<string name="applist_actionbar_deselectall">Deselect all</string>
		<string name="applist_actionbar_batchselect_none">Select apps</string>
		<string name="applist_actionbar_batchselect_singular">One app selected</string>
		<string name="applist_actionbar_batchselect_plural">apps selected</string>
		<string name="applist_filter_summary_prefix">Filtering by&#160;</string>
		<string name="applist_filter_apptype_label">Application type:</string>
		<string name="applist_filter_settinggroup_label">Includes settings:</string>
		<string name="applist_filter_status_label">Status:</string>
		<string name="applist_filter_clearfilters">Clear filters</string>
		<string name="title_activity_preferences_list">Preferences</string>
		<string name="preferences_heading_about">About</string>
		<string name="preferences_about_title">About this app</string>
		<string name="preferences_about_summary">App information and license</string>
		<string name="preferences_credits_title">Credits</string>
		<string name="preferences_credits_summary">Creators and contributors</string>
		<string name="preferences_openxdathread_title">View on XDA</string>
		<string name="preferences_openxdathread_summary">Open the thread on xda-developers.com in your browser</string>
		<string name="preferences_heading_language">Language</string>
		<string name="preferences_switchlanguage_title">Change language</string>
		<string name="preferences_switchlanguage_summary">Choose your preferred language</string>
		<string name="preferences_usephonelocale_title">Remove language preference</string>
		<string name="preferences_usephonelocale_summary">Use the device locale to determine the interface language</string>
		<string name="preferences_heading_backuprestore">Backup &amp; Restore</string>
		<string name="preferences_backup_title">Backup</string>
		<string name="preferences_backup_summary">Create a backup of current settings</string>
		<string name="preferences_restore_title">Restore</string>
		<string name="preferences_restore_summary">Restore settings from a backup</string>
		<string name="preferences_heading_global_operations">Global operations</string>
		<string name="preferences_global_delete_title">Purge settings</string>
		<string name="preferences_global_delete_summary">Remove all PDroid settings for all apps</string>
		<string name="preferences_apprestart_title">Application restart</string>
		<string name="preferences_apprestart_message">PDroid Manager will now restart to apply the configuration change</string>
		<string name="preferences_chooselangage_alerttitle">Choose language</string>
		<string name="restore_dialog_title">Restore settings</string>
		<string name="restore_no_backups">No backups are available to restore</string>
		<string name="restore_signature_invalid">The digital signature for the selected backup file does not match the backup. The backup may have been modified by another program. Uninstalling and re-installed PDroid Manager since you created the backup will also cause this message.</string>
		<string name="restore_signature_missing">No digital signature can be found for the selected backup file. There is no way to verify that the backup file has not been modified by another program since it was created.</string>
		<string name="restore_dialog_continue_prompt">Continue to restore settings from the file?</string>
		<string name="restore_failed_dialog_title">Restore failed</string>
		<string name="restore_invalid_backup">The selected file is missing, corrupted, or not a valid backup file.</string>
		<string name="restore_complete_success">Restore complete</string>
		<string name="restore_complete_fail_invalid">Restore failed: The selected file is not a valid backup file.</string>
		<string name="restore_complete_fail_reading">Restore failed: The selected file could not be read.</string>
		<string name="restore_complete_fail_other">Restore failed: An error prevented restoration.</string>
		<string name="restore_progress_dialog_title">Restoring from backup</string>
		<string name="restore_progress_dialog_message">Please wait while your backup is restored</string>
		<string name="storage_error_body">The external storage cannot be accessed. If your device uses an external SD Card or Micro SD Card please ensure it is inserted and properly formatted.</string>
		<string name="backup_dialog_title">Backup settings</string>
		<string name="backup_path_text">Your backup will be stored in: </string>
		<string name="backup_filename">Filename for backup</string>
		<string name="backup_filename_prefix" translatable="false">pdroidmanager_backup_</string>
		<string name="backup_filename_hint">Filename</string>
		<string name="backup_message_file_exists">A file with the speficied filename already exists. The new backup will replace the existing file.</string>
		<string name="backup_dialog_continue_prompt">Continue to backup to the file?</string>
		<string name="backup_failed_dialog_title">Backup failed</string>
		<string name="backup_complete_success">Backup complete</string>
		<string name="backup_complete_fail_signing">Backup failed: Signing of the backup failed</string>
		<string name="backup_complete_fail_writing">Backup failed: The backup file could not be written</string>
		<string name="backup_complete_fail_other">Backup failed: The backup file could not be generated</string>
		<string name="global_delete_confirm_title">Delete all settings</string>
		<string name="global_delete_confirm_message">Are you sure you want to remove all current PDroid settings for all apps on this device? (Note that this does not remove backup files)</string>
		<string name="global_delete_progress_dialog_title">Deleting&#8230;</string>
		<string name="global_delete_progress_dialog_message">Deleting all PDroid settings</string>
		<string name="global_delete_complete_message">All PDroid settings have been deleted</string>
		<string name="title_activity_app_detail">Application</string>
		<string name="detail_dialog_saving_title">Please wait</string>
		<string name="detail_dialog_saving_message">Updating&#8230;</string>
		<string name="detail_dialog_loading_message">Loading settings</string>
		<string name="detail_actionbar_heading_batch">Settings to apply</string>
		<string name="detail_actionbar_savebutton_title">Save settings</string>
		<string name="detail_actionbar_close_title">Close without saving</string>
		<string name="detail_actionbar_delete_title">Delete settings</string>
		<string name="detail_custom_input_OKtext">OK</string>
		<string name="detail_notifyonaccess_text">Notify on access</string>
		<string name="detail_logonaccess_text">Log access</string>
		<string name="detail_customvalue_pretext">Custom:</string>
		<string name="detail_setting_option_nochange_contentdescription">No change</string>
		<string name="detail_setting_option_allow_contentdescription">Set to allow</string>
		<string name="detail_setting_option_deny_contentdescription">Set to deny</string>
		<string name="detail_setting_option_random_contentdescription">Set to random</string>
		<string name="detail_setting_option_custom_contentdescription">Set to custom</string>
		<string name="detail_setting_option_yes_contentdescription">Set to yes</string>
		<string name="detail_setting_option_no_contentdescription">Set to no</string>
	<string name="help_dialog_OKtext">OK</string>
	<string name="button_help_text">Help</string>
		<string name="alert_dialog_ok">OK</string>
		<string name="alert_dialog_yes">Yes</string>
		<string name="alert_dialog_no">No</string>
		<string name="alert_dialog_continue">Continue</string>
		<string name="alert_dialog_cancel">Cancel</string>
		<string name="alert_dialog_close">Close</string>
		<string name="notification_toast_text1">access to</string>
		<string name="notification_toast_text2">was</string>
		<string name="notification_toast_image_content_description">Icon indicator of event type</string>
		<string name="notification_toast_allowed_text">allowed</string>
		<string name="notification_toast_denied_text">denied</string>
		<string name="notification_toast_random_text">random</string>
		<string name="notification_toast_custom_text">custom</string>
		<string name="notification_newinstall_title"> installed</string>
		<string name="notification_newinstall_text">Click to configure PDroid settings</string>
		<string name="notification_update_title">has changed permissions</string>
		<string name="notification_update_text">Click to configure PDroid settings</string>
		<string name="setting_option_allow">Allow</string>
		<string name="setting_option_random">Random</string>
		<string name="setting_option_custom">Custom</string>
		<string name="setting_option_deny">Deny</string>
			<string name="profile_list_actionbar_title">Profiles</string>
			<string name="profile_list_actionbar_add">Add profile</string>
			<string name="profile_list_actionbar_batchselect_none">Select profiles</string>
			<string name="profile_list_actionbar_batchselect_singular">One profile selected</string>
			<string name="profile_list_actionbar_batchselect_plural">profiles selected</string>
			<string name="profile_list_actionbar_delete">Delete profiles</string>
			<string name="profile_list_actionbar_duplicate">Copy profiles</string>
			<string name="profile_list_delete_confirm_title">Delete profiles</string>
			<string name="profile_list_delete_confirm_message">Are you sure you want to delete the selected profiles</string>
			<string name="profile_list_duplicate_confirm_title">Copy profiles</string>
			<string name="profile_list_duplicate_confirm_message">Are you sure you want to copy the selected profiles</string>
			<string name="profile_list_duplicate_profile_postfix">Copy</string>
			<string name="profiles_inbuilt_trusted">Trusted</string>
			<string name="profiles_inbuilt_untrusted">Untrusted</string>
			<string name="applist_actionbar_apply_profile">Apply profile</string>
			<string name="applist_select_profile_dialog_title">Apply profile</string>
</resources>