<?xml version="1.0" encoding="utf-8"?>
<!-- 
/**
 * Copyright (C) 2012 Simeon J. Morgan (smorgan@digitalfeed.net)
 * This program is free software; you can redistribute it and/or modify it under
 * the terms of the GNU General Public License as published by the Free Software
 * Foundation; either version 3 of the License, or (at your option) any later version.
 * This program is distributed in the hope that it will be useful, but WITHOUT ANY
 * WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
 * PARTICULAR PURPOSE. See the GNU General Public License for more details.
 * You should have received a copy of the GNU General Public License along with
 * this program; if not, see <http://www.gnu.org/licenses>.
 * The software has the following requirements (GNU GPL version 3 section 7):
 * You must retain in pdroid-manager, any modifications or derivatives of
 * pdroid-manager, or any code or components taken from pdroid-manager the author
 * attribution included in the files.
 * In pdroid-manager, any modifications or derivatives of pdroid-manager, or any
 * application utilizing code or components taken from pdroid-manager must include
 * in any display or listing of its creators, authors, contributors or developers
 * the names or pseudonyms included in the author attributions of pdroid-manager
 * or pdroid-manager derived code.
 * Modified or derivative versions of the pdroid-manager application must use an
 * alternative name, rather than the name pdroid-manager.
 */
 
 /**
 * @author Simeon J. Morgan <smorgan@digitalfeed.net>
 */
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
		<RadioGroup 
		    android:id="@+id/setting_choice"
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:layout_alignParentRight="true"
		    android:orientation="horizontal"
		    >


		    <RadioButton
		        android:id="@+id/option_allow"
		        style="@style/SettingOptionAllow"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:contentDescription="@string/detail_setting_option_allow_contentdescription" />
		
		    <RadioButton
		        android:id="@+id/option_yes"
		        style="@style/SettingOptionAllow"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:contentDescription="@string/detail_setting_option_yes_contentdescription" />
		
		    <RadioButton
		        android:id="@+id/option_random"
		        style="@style/SettingOptionRandom"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:contentDescription="@string/detail_setting_option_random_contentdescription" />
		
		    <RadioButton
		        android:id="@+id/option_custom"
		        style="@style/SettingOptionCustom"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
				android:contentDescription="@string/detail_setting_option_custom_contentdescription" />
		
		    <RadioButton
		        android:id="@+id/option_customlocation"
		        style="@style/SettingOptionCustom"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:contentDescription="@string/detail_setting_option_custom_contentdescription" />
		
		    <RadioButton
		        android:id="@+id/option_deny"
		        style="@style/SettingOptionDeny"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:contentDescription="@string/detail_setting_option_deny_contentdescription" />
		
		    <RadioButton
		        android:id="@+id/option_no"
		        style="@style/SettingOptionNo"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:contentDescription="@string/detail_setting_option_no_contentdescription" />

		</RadioGroup>
		
		<ImageButton 
	        android:id="@+id/help_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="0dp"
	        android:gravity="center_vertical"
			android:src="@drawable/button_help"
			android:contentDescription="@string/button_help_text"
			android:layout_alignParentLeft="true"
	        />
		<RelativeLayout
		    android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:gravity="center_vertical"
			android:layout_marginLeft="4dp"
			android:layout_toRightOf="@+id/help_button" >
		    <TextView
		        android:id="@+id/option_title"
		        android:layout_width="wrap_content"
		        android:layout_height="fill_parent"
		        android:textSize="16sp"
		         />
			<TextView
		        android:id="@+id/option_custom_value_pretext"
		        android:layout_width="wrap_content"
		        android:layout_height="fill_parent"
		        android:layout_below="@+id/option_title"
		        android:textSize="12sp"
		        android:text="@string/detail_customvalue_pretext"
		        android:visibility="gone"
		         />
		    <TextView
		        android:id="@+id/option_custom_value"
		        android:layout_width="wrap_content"
		        android:layout_height="fill_parent"
		        android:layout_below="@+id/option_title"
		        android:layout_toRightOf="@+id/option_custom_value_pretext"
		        android:textSize="12sp"
		        android:visibility="gone"
		         />
	    </RelativeLayout>
</RelativeLayout>